# dct_txt_ts

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dct-txt.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dct_txt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDctTxt/: dct_txt.h
bindings/swift/TreeSitterDctTxtTests/: TreeSitterDctTxtTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: sample.dct.txt  sample.dct_txt
test/corpus/: sample_test.txt
